library/pod-security-policy/windows-runasusername/samples/psps-windows-runasusername/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nanoserver-as-containeruser
spec:
  containers:
  - name: ping-loop
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
    securityContext:
      windowsOptions:
        runAsUserName: "ContainerUser"
  nodeSelector:
    "kubernetes.io/os": windows
