library/pod-security-policy/windows-runasusername/samples/psps-windows-runasusername/example_disallowed_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nanoserver-as-containeradmin
spec:
  securityContext:
    windowsOptions:
      runAsUserName: "ContainerAdmin"
  containers:
  - name: ping-loop
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
  nodeSelector:
    "kubernetes.io/os": windows
