library/pod-security-policy/windows-runasusername/samples/psps-windows-runasusername/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedRunAsUserNames
metadata:
  name: runasusername-is-not-containeradmin
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    disallowedUserNames:
      - "ContainerAdmin"
